--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "prettier": "^2.5.1",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
